# Podcast-Agent

./: .gitignore  INTEGRATION-SPEC.md  LLMLOG.MD  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.claude/: instructions.md  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
config/: channels.yaml  settings.yaml
podcast_summaries/: Base-Token-Pumpfuns-Rise-and-Solana-DATs-Livestre-blog-20250916-claude.md  Base-Token-Pumpfuns-Rise-and-Solana-DATs-Livestre-blog-20250916.md  Base-Token-Pumpfuns-Rise-and-Solana-DATs-Livestre-brief-20250916.md  Fed-Embraces-Run-It-Hot-blog-2025-12-14.html  Fed-Embraces-Run-It-Hot-blog-2025-12-14.md  He-Made-26M-on-YouTubeBut-Nearly-Lost-It-All-Linus-insights-20251227.md  Linus_Tech_Tips_Business_Model_Analysis_20251227.md  building-largest-solana-treasury-company-blog-2025-09-25.md  context-engineering-for-ai-agents-langchain-manus-blog-2025-10-15.html  context-engineering-for-ai-agents-langchain-manus-blog-2025-10-15.md  how-10-people-built-fastest-growing-crypto-exchange-blog-2025-09-16.md  inevitable-money-printing-debt-doom-loop-blog-2025-09-25.md  inside-coinbases-375m-acquisition-of-echo-shan-aggarwal-blog-2025-10-21.md  iphone-17-pro-air-unboxing-1-hot-take-blog-2025-09-19.md  mcp-servers-teaching-ai-to-use-the-internet-blog-2025-10-07.html  mcp-servers-teaching-ai-to-use-the-internet-blog-2025-10-07.md  plasma-tvl-growth-prediction-market-momentum-hypurrr-nfts-blog-2025-10-02.md  podcast-summary-2025-09-16.md  the-7-most-powerful-moats-for-ai-startups-blog-2025-10-13.md  this-startup-is-deleting-29-of-all-co2-emissions-blog-2025-10-13.md  youtube-research-2025-09-12.md
spec/: podcast-summary-spec.md
src/: __init__.py  fetch_and_summarize.py  podcast_summary.py  summarize.py
transcript_reports/: transcript-extraction-2025-09-16.md  transcript-extraction-2025-09-19.md  transcript-extraction-2025-09-25.md  transcript-extraction-2025-10-02.md  transcript-extraction-2025-10-07.md  transcript-extraction-2025-10-13.md  transcript-extraction-2025-10-15.md  transcript-extraction-2025-10-21.md  transcript-extraction-2025-10-22.md  transcript-extraction-2025-12-14.md
transcripts/: 0xresearchPodcast_20250915_4N0BUzMVMEk.md  0xresearchPodcast_unknown_1kCr1Cdx99k.md  0xresearchPodcast_unknown__clDVu7FQoE.md  EveryInc_unknown_lctDoa5M880.md  ForwardGuidanceBW_20250911_SmG2RhOTPKA.md  ForwardGuidanceBW_unknown_HMcTHEVXLy8.md  ForwardGuidanceBW_unknown_mLcafgSuXew.md  LangChain_unknown_6_BcCthVvb8.md  (+7 more)
(+19 files in other folders)
